dodanie harmongramu do skrapowania ofert